# talent-vault

./: .dockerignore  .env  .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_kafka.py
datagen/: Dockerfile  data_generator.py  kafka_push.py  requirements.txt
frontend/: .dockerignore  Dockerfile  app.py  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx  routes.tsx
frontend/src/components/charts/: SexPie.tsx  TopBarChart.tsx
frontend/src/components/kpi/: KpiCard.tsx
frontend/src/components/layout/: AppShell.tsx  Navbar.tsx
frontend/src/hooks/: useDebounced.ts  usePerson.ts  usePersons.ts  useStats.ts
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/src/pages/: ContactPage.tsx  DashboardPage.tsx  NotFoundPage.tsx  PersonDetailPage.tsx  PersonsPage.tsx  PitchPage.tsx  PitchTecnicoPage.tsx  SplashPage.tsx
frontend/src/pitch/: Carousel.tsx  types.ts
frontend/src/state/: pitchStore.ts
monitoring/: prometheus.yml
src/: consumer.py  database.py  main.py  processor.py
src/api/: dependencies.py  main.py  routes.py
src/consumer/: kafka_consumer.py  utils.py
src/extractors/: kafka_consumer.py
src/loaders/: mongo_loader.py  sql_loader.py
src/models/: sql_models.py
src/monitoring/: metrics.py
src/processing/: sql_loader.py  transformer.py
src/processors/: data_unifier.py
src/storage/: mongo_client.py  redis_client.py  sql_client.py
src/utils/: config.py  logger.py
tests/: test_aggregator.py  test_api.py  test_classifier.py  test_consumer.py  test_redis_buffer.py  test_transformer.py
(+28 files in other folders)
