[project]
name = "talent-vault"
version = "0.1.0"
description = "Real-time HR data pipeline: Kafka to MongoDB to PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka",
    "pymongo",
    "sqlalchemy",
    "psycopg2-binary",
    "redis",
    "fastapi",
    "uvicorn",
    "loguru",
    "prometheus-client",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "kafka-python-ng>=2.2.0",
    "faker>=40.15.0",
    "streamlit>=1.38.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx",
]

[tool.ty.src]
root = "."

[tool.pyright]
extraPaths = ["."]
