[project]
name = "talent-vault"
version = "0.1.0"
description = "Real-time HR data pipeline: Kafka to MongoDB to PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka",
    "pymongo",
    "sqlalchemy",
    "psycopg2-binary",
    "redis",
    "fastapi",
    "uvicorn",
    "loguru",
    "prometheus-client",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "kafka-python-ng>=2.2.3",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx",
]
